# Entra-Security-Analytics

./: .gitignore  README.md  Register-EntraApp.ps1  start.ps1  start.sh
.github/workflows/: ci.yml
backend/: .env.example  README.md  log_analytics.db-shm  log_analytics.db-wal  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/alerting/: __init__.py  base.py  dispatcher.py  email_alert.py  slack_alert.py  teams_alert.py
backend/app/analyzers/: __init__.py  anomaly.py  risk_scorer.py  rule_schema.py  rules_engine.py  seed_rules.py  user_profiles.py
backend/app/api/: __init__.py  routes_auth.py  routes_capolicies.py  routes_dashboard.py  routes_incidents.py  routes_logs.py  routes_pim.py  routes_rules.py  routes_user_profiles.py  routes_users.py
backend/app/auth/: __init__.py  msal_client.py  token_validator.py
backend/app/collectors/: __init__.py  base.py  ca_policies.py  entra_audit.py  entra_signin.py  office365.py  pim.py  powerapps.py  sharepoint.py  users.py
backend/app/models/: __init__.py  database.py
backend/app/scheduler/: __init__.py  polling.py
backend/tests/: conftest.py  test_auth_routes.py  test_capolicies.py  test_dispatcher.py  test_entra_signin.py  test_msal_client.py  test_risk_scorer.py  test_routes.py  test_rules_engine.py  test_token_validator.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/auth/: AuthProvider.tsx  msalConfig.ts
frontend/src/components/: JsonView.tsx  SortableTable.tsx  SyncStatusPanel.tsx
frontend/src/pages/: ActivityLogs.tsx  (+10 more)
