[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analytics"
version = "0.1.0"
description = "SIEM-lite tool for Microsoft Entra, Office 365, SharePoint, and Power Apps log analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Log Analytics Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "click>=8.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "aiosmtplib>=3.0.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.9",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx[http2]>=0.27.0",
]

[project.scripts]
log-analytics = "app.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
where = ["."]
